--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,12 @@ Package: metacell.flow
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Amos",
+           family = "Tanay",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: What license it uses
+           email = "amos.tanay@weizmann.ac.il")
+Description: Supporting inference of differentiation flow over metacell manifolds (and innovation of additional scRNA buzzwords)
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
